<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="plusCounter"
        android:text="@string/plus"
        android:textSize="25sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/min"
        app:layout_constraintTop_toBottomOf="@+id/counterNum"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:onClick="minCounter"
        android:text="@string/minus"
        android:textSize="25sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterNum"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/reset"
        android:layout_width="82dp"
        android:layout_height="56dp"
        android:onClick="initCounter"
        android:text="@string/reset"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/min"
        app:layout_constraintTop_toBottomOf="@+id/counterNum"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/counterNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="share"
        android:text="@string/share"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/reset"
        app:layout_constraintStart_toStartOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintVertical_bias="0.391" />


    <Button
        android:id="@+id/shareImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:onClick="image"
        android:text="@string/shareImage"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/shareBtn"
        app:layout_constraintEnd_toEndOf="@+id/reset"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/shareBtn"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintVertical_bias="0.125" />


</androidx.constraintlayout.widget.ConstraintLayout>